--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
   ],
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "postcss-ts-classnames": "^0.1.2",
     "promptly": "^3.0.3",
-    "pug": "^2.0.3",
+    "pug": "^2.0.4",
     "request": "^2.88.0",
     "signale": "^1.4.0",
     "vue": "^2.6.7",
