--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "signale": "^1.4.0",
-    "vue": "^2.6.7",
+    "vue": "^2.6.11",
+    "vue-flickity": "^1.2.1",
     "vue-router": "^3.0.2"
   }
 }
