--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "hooper": "^0.3.4",
     "normalize.css": "^8.0.1",
     "postcss-ts-classnames": "^0.1.2",
     "promptly": "^3.0.3",
