--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "acorn-dynamic-import": "^4.0.0",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
@@ -57,6 +58,7 @@
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "signale": "^1.4.0",
+    "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.11",
     "vue-flickity": "^1.2.1",
     "vue-router": "^3.0.2"
