--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.11",
     "vue-flickity": "^1.2.1",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuelidate": "^0.7.5"
   }
 }
